fix: javaComile 옵션 변경