@@ -27,15 +27,16 @@ tasks.named('test') {
 	useJUnitPlatform()
 }
 
-compileJava.options.compilerArgs.addAll([
-		"--add-exports=java.base/sun.security.pkcs=ALL-UNNAMED",
-		"--add-exports=java.base/sun.security.util=ALL-UNNAMED",
-		"--add-exports=java.base/sun.security.x509=ALL-UNNAMED",
-		"--add-opens=java.base/sun.security.pkcs=ALL-UNNAMED",
-		"--add-opens=java.base/sun.security.util=ALL-UNNAMED",
-		"--add-opens=java.base/sun.security.x509=ALL-UNNAMED"
-])
+tasks.withType(JavaCompile){
+	options.compilerArgs.addAll([
+			"--add-exports=java.base/sun.security.pkcs=ALL-UNNAMED",
+			"--add-exports=java.base/sun.security.util=ALL-UNNAMED",
+			"--add-exports=java.base/sun.security.x509=ALL-UNNAMED"
+	])
+}
 
-//compileJava {
-//	options.compilerArgs.addAll(['--release', '11'])
-//}
+//compileJava.options.compilerArgs.addAll([
+//		"--add-exports=java.base/sun.security.pkcs=ALL-UNNAMED",
+//		"--add-exports=java.base/sun.security.util=ALL-UNNAMED",
+//		"--add-exports=java.base/sun.security.x509=ALL-UNNAMED"
+//])
